--- a/card-editor/src/components/Header/Header.module.css
+++ b/card-editor/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
   position: static;
   top: unset;
   left: unset;
-  width: 1200px;
+  width: 1210px;
   height: 125px;
   z-index: 1000;
   display: flex;
