--- a/card-editor/src/components/TopToolbar/TopToolbar.module.css
+++ b/card-editor/src/components/TopToolbar/TopToolbar.module.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: flex-start;
   width: 100%;
-  padding-right: 20px;
 }
 .leftSide {
   width: 100%;
@@ -20,7 +19,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  gap: 20px; /* Установлен фиксированный gap между элементами */
+  gap: 15px; /* Установлен фиксированный gap между элементами */
   padding: 0;
 }
 .topToolbarEL {
@@ -41,7 +40,7 @@
   background-color: rgba(128, 128, 128, 0.19);
   border: 1px solid rgba(158, 158, 158, 1);
   border-radius: 8px;
-  margin-right: 25px;
+  /* margin-right: 25px; */
   white-space: nowrap;
 }
 .toolbarRow:first-child{
